Fix index page title overflow

--- a/utility/style.css
+++ b/utility/style.css
@@ -6,7 +6,9 @@
   color: var(--frontpage-yellow);
   min-height: 3.125em;
   margin-bottom: 1.5em;
-  margin-top: 1.5em;
+  margin-top: 1.0em;
+  padding-bottom: 1.5em;
+  overflow-x: auto;
 }
 .header-title > h1 {
   font-size: 2.5em;
@@ -23,7 +25,7 @@
   margin-top: 1.5625em;
   background-color: var(--frontpage-blue);
   height: 100vh;
-  /* width: 80vw; */
+  max-width: 99vw;
   color: var(--frontpage-yellow);
 }
 .button-row {
@@ -227,9 +229,9 @@ tr {
   background-color: var(--highlight-blue);
 }
 .nav-btn {
-  height: 3em;
-  width: 12em;
-  font-size: 1.875em;
+  height: 2.8em;
+  width: 11em;
+  font-size: 1.8em;
   border-radius: 0.9375em;
   color: var(--frontpage-blue);
   font-weight: bold;
